# ishizue

./: CLAUDE.md  Cargo.build-spec.json  Cargo.toml  flake.nix
.github/workflows/: auto-release.yml
src/: debounce.rs  job.rs  lib.rs  path.rs  strings.rs
